apps/meshes/istio/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-ee85e06
  namespace: default
spec:
  selector:
    matchLabels:
      app: ingress-ee85e06
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ingress-ee85e06
        aadpodidbinding: e416ac-istio-pod-identity 
    spec:
      containers:
      - name: ingress-ee85e06
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: tls-mount
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: tls-mount
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "istio-tls"
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-ee85e06-svc
  namespace: default
  labels:
    version: "1.0"
spec:
  selector:
    app: ingress-ee85e06
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
